# haskell-stan

./: .gitignore  cabal.project  hie.yaml
haskell-stan/: Changelog.md  haskell-stan.cabal
haskell-stan-builder/: haskell-stan-builder.cabal
haskell-stan-builder/.hie/Stan/Builder/: Build.hie  CoreTypes.hie  JSON.hie  ParameterTypes.hie
haskell-stan-builder/src/Stan/: Builder.hs
haskell-stan-builder/src/Stan/Builder/: Build.hs  CoreTypes.hs  JSON.hs  ParameterTypes.hs  Parameters.hs
haskell-stan-functions/: haskell-stan-functions.cabal
haskell-stan-functions/.hie/Stan/: Functions.hie
haskell-stan-functions/.hie/Stan/Functions/: Constraints.hie  Containers.hie  Numeric.hie  Probability.hie
haskell-stan-functions/src/Stan/: Functions.hs
haskell-stan-functions/src/Stan/Functions/: Constraints.hs  Containers.hs  Numeric.hs  Operators.hs  Probability.hs
haskell-stan-language/: haskell-stan-language.cabal
haskell-stan-language/.hie/Stan/Language/: Evaluate.hie  Expressions.hie  Format.hie  Functions.hie  Indexing.hie  Operations.hie  ParameterTypes.hie  Program.hie  Recursion.hie  Statements.hie  TypedList.hie  Types.hie
haskell-stan-language/expressions-test/: Main.hs
haskell-stan-language/src/Stan/: Language.hs
haskell-stan-language/src/Stan/Language/: Evaluate.hs  Expressions.hs  Format.hs  Functions.hs  Indexing.hs  Operations.hs  Program.hs  Recursion.hs  Statements.hs  TypedList.hs  Types.hs
haskell-stan/src/Stan/: Frames.hs  JSON.hs  ModelBuilder.hs  ModelConfig.hs  ModelRunner.hs  Parameters.hs  RScriptBuilder.hs  SamplerCSV.hs
haskell-stan/src/Stan/ModelBuilder/: BuilderTypes.hs  BuildingBlocks.hs  DesignMatrix.hs  Distributions.hs  Expressions.hs  FixedEffects.hs  SumToZero.hs
haskell-stan/src/Stan/ModelBuilder/BuildingBlocks/: ArrayHelpers.hs  CovarianceStructure.hs  DirichletMultinomial.hs  GroupAlpha.hs
haskell-stan/src/Stan/ModelBuilder/Distributions/: RealBinomial.hs  RejectionSampler.hs
haskell-stan/src/Stan/ModelBuilder/TypedExpressions/: DAG.hs  DAGTypes.hs  Evaluate.hs  Expressions.hs  Format.hs  Functions.hs  Indexing.hs  Operations.hs  Program.hs  Recursion.hs  StanFunctions.hs  Statements.hs  TypedList.hs  Types.hs
haskell-stan/test/: Main.hs  ModelPaths.hs  Models.hs
haskell-stan/testExpressions/: Main.hs
