cabal-version:       3.0
name:                haskell-stan-functions
version:             0.1.0.0
synopsis:            Haskell functions for stan function expressions
description:         Each stan function requires a haskell wrapper to create the appropriate expression
license:             BSD-3-Clause
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files: Readme.md Changelog.md

flag streamly9
    Description: require streamly >= 0.9
    Manual: True
    Default: False

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       StrictData
                       TupleSections
                       TypeApplications

library
  import: common-options
  build-depends: base >= 4.12 && < 5
               , fin >= 0.2 && < 0.4
               , haskell-stan-language
               , relude  >=1.0.0 && < 1.3
               , text >= 1.2 && < 2.1
  if flag(streamly9)
    build-depends:
      streamly >=0.9 && <0.11, streamly-core >=0.1.0 && <0.3, streamly-bytestring >=0.2.0 && < 0.3
  else
    build-depends: streamly >=0.8 && <0.9, streamly-bytestring >=0.1.0 && <0.2
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  exposed-modules: Stan.Functions
                 , Stan.Functions.Constraints
                 , Stan.Functions.Operators
                 , Stan.Functions.Containers
                 , Stan.Functions.Numeric
                 , Stan.Functions.Probability
  hs-source-dirs:   src
