cabal-version:       3.0
name:                haskell-stan-language
version:             0.1.0.0
synopsis:            Language core for haskell -> stan transpiler
description:         Representation of stan's syntax an AST of Haskell types and writing the corresponding Stan program text
license:             BSD-3-Clause
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files: Readme.md Changelog.md

flag streamly9
    Description: require streamly >= 0.9
    Manual: True
    Default: False


common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       StrictData
                       TupleSections
                       TypeApplications

library
  import: common-options
  build-depends: base >= 4.12 && < 5
               , array >= 0.5.4 && < 0.6
               , containers
               , fin >= 0.2 && < 0.4
               , foldl >= 1.4 && < 1.5
               , monadic-recursion-schemes >= 0.1.11 && < 0.2
               , mtl >= 2.2 && < 2.4
               , prettyprinter >= 1.7 && < 1.8
               , recursion-schemes >= 5.1.2 && < 5.3
               , relude  >=1.0.0 && < 1.3
               , text >= 1.2 && < 2.1
               , vec >= 0.4 && < 0.6
  if flag(streamly9)
    build-depends:
      streamly >=0.9 && <0.11, streamly-core >=0.1.0 && <0.3, streamly-bytestring >=0.2.0 && < 0.3
  else
    build-depends: streamly >=0.8 && <0.9, streamly-bytestring >=0.1.0 && <0.2
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  exposed-modules: Stan.Language.Evaluate
                 , Stan.Language.Expressions
                 , Stan.Language.Format
                 , Stan.Language.Functions
                 , Stan.Language.Indexing
                 , Stan.Language.Operations
                 , Stan.Language.Program
                 , Stan.Language.Recursion
                 , Stan.Language.Statements
                 , Stan.Language.TypedList
                 , Stan.Language.Types
  hs-source-dirs:   src

executable expressions-test
   import: common-options
   ghc-options: -Wall -O
   hs-source-dirs: expressions-test
   main-is: Main.hs
   build-depends: base
                , haskell-stan-language
                , prettyprinter
                , relude
   mixins:  base hiding (Prelude)
          , relude (Relude as Prelude
          , Relude.Extra)
