cabal-version:       3.0
name:                haskell-stan
version:             0.1.0.0
synopsis:            haskell/Stan interface
description:         tools for writing Stan code from haskell, managing Stan's runtime environment, etc.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files: Readme.md Changelog.md

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       StrictData
                       TupleSections
                       TypeApplications

library
  import: common-options
  build-depends: base >= 4.12 && < 5
               , array >= 0.5.4 && < 0.6
               , aeson >= 1.4 && < 2.1
               , bytestring >= 0.10 && < 0.12
               , cereal  >= 0.5.7 && < 0.6
               , cereal-vector >= 0.2 && < 0.3
               , colonnade
               , containers
               , data-fix >= 0.3.0 && < 0.4
               , dependent-hashmap >= 0.1.0.1 && < 0.2
               , dependent-map >= 0.4 && < 0.5
               , dependent-sum >= 0.7.0 && < 0.8
               , directory >= 1.3.3 && < 1.4
               , extra >= 1.7.7 && < 1.8
               , fin >= 0.2 && < 0.3
               , foldl >= 1.4 && < 1.5
               , Frames >= 0.6.1 && < 0.8
               , Frames-streamly >= 0.2.0
               , hashable >= 1.3 && < 1.6
               , hs-cmdstan >= 0.1 && < 0.2
               , knit-haskell >= 0.9 && < 0.11
               , massiv >= 1.0 && < 1.1
               , megaparsec >= 9.0.0 && < 10.0
               , monadic-recursion-schemes >= 0.1.11 && < 0.2
               , mtl >= 2.2 && < 2.3
               , polysemy
               , pretty >= 1.1 && < 1.2
               , prettyprinter >= 1.7 && < 1.8
               , process >= 1.6 && < 1.7
               , recursion-schemes >= 5.1.2 && < 5.3
               , relude  >=1.0.0 && < 1.2
               , say >= 0.1.0.1 && < 0.2
               , scientific >= 0.3.5 && < 0.4
               , some >= 1.0.2 && < 1.1
               , streamly >= 0.7.2 && < 0.9
               , text >= 1.2 && < 2.1
               , transformers-compat >= 0.6 && < 0.7
               , vec >= 0.4 && < 0.5
               , vector
               , vector-builder >= 0.3.7 && < 0.4
               , vinyl >= 0.13 && < 0.15
  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  exposed-modules: Stan.JSON
                 , Stan.Parameters
                 , Stan.Parameters.Massiv
                 , Stan.ModelConfig
                 , Stan.ModelRunner
                 , Stan.SamplerCSV
                 , Stan.ModelBuilder
                 , Stan.ModelBuilder.BuilderTypes
                 , Stan.ModelBuilder.BuildingBlocks
                 , Stan.ModelBuilder.DesignMatrix
                 , Stan.ModelBuilder.Distributions
--                 , Stan.ModelBuilder.Expressions
                 , Stan.ModelBuilder.TypedExpressions.DAGTypes
                 , Stan.ModelBuilder.TypedExpressions.DAG
                 , Stan.ModelBuilder.TypedExpressions.Evaluate
                 , Stan.ModelBuilder.TypedExpressions.Expressions
                 , Stan.ModelBuilder.TypedExpressions.Format
                 , Stan.ModelBuilder.TypedExpressions.Functions
                 , Stan.ModelBuilder.TypedExpressions.StanFunctions
                 , Stan.ModelBuilder.TypedExpressions.Indexing
                 , Stan.ModelBuilder.TypedExpressions.Operations
                 , Stan.ModelBuilder.TypedExpressions.Program
                 , Stan.ModelBuilder.TypedExpressions.Recursion
                 , Stan.ModelBuilder.TypedExpressions.Statements
                 , Stan.ModelBuilder.TypedExpressions.TypedList
                 , Stan.ModelBuilder.TypedExpressions.Types
                 , Stan.ModelBuilder.SumToZero
                 , Stan.RScriptBuilder
                 , Stan.Frames
  hs-source-dirs:   src

executable model-test
   import: common-options
   ghc-options: -Wall -O
   hs-source-dirs: test
   main-is: Main.hs
   other-modules: Models
                , KnitEnvironment
   build-depends: base
                , bytestring
                , containers
                , foldl
                , haskell-stan
                , hs-cmdstan
                , knit-haskell
                , flat
                , Frames
                , Frames-serialize
                , Frames-streamly
                , lens
                , relude
                , text
                , vector
   mixins:  base hiding (Prelude)
          , relude (Relude as Prelude
          , Relude.Extra)
   default-language: Haskell2010

executable expressions-test
   import: common-options
   ghc-options: -Wall -O
   hs-source-dirs: testExpressions
   main-is: Main.hs
   build-depends: base
                , haskell-stan
                , prettyprinter
                , relude
   mixins:  base hiding (Prelude)
          , relude (Relude as Prelude
          , Relude.Extra)
